@@ -1,6 +1,7 @@
 ===v7.1.2===
  * Various tooltips now reflect that WoW only supports .ogg files for custom sound files - MP3s are no longer supported by the game client.
  * Removed error warning about other addons using debugprofilestart() - we got the data we needed.
+ * TellMeWhen will no longer forcibly disable Blizzard's cooldown timer text when Tukui is enabled since Tukui now uses those texts as its timers.
 
 
 ===v7.1.1===
